--- a/index.html
+++ b/index.html
@@ -712,6 +712,127 @@
 
   </div>
 </section>
+
+<section class="section" style="background-color: #fff;">
+  <div class="container is-max-desktop">
+
+    <h2 class="title is-3 has-text-centered">Key Findings</h2>
+    <div class="content has-text-centered" style="margin-bottom: 40px;">
+      <p>Summary of the major breakthroughs achieved in this study.</p>
+    </div>
+
+    <div class="columns is-multiline">
+      
+      <div class="column is-6">
+        <div class="box" style="border-top: 5px solid #4caf50; height: 100%;">
+          <div class="media">
+            <div class="media-left">
+              <span style="font-size: 3em;">🎯</span> </div>
+            <div class="media-content">
+              <p class="title is-5">Superior Segmentation</p>
+              <p class="subtitle is-6" style="margin-top: 5px;">
+                The proposed <strong>3UResNet</strong> model achieved a Dice Score of <strong>~0.95</strong>, significantly outperforming standard ViT and CNN baselines by preserving local anatomical details.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="column is-6">
+        <div class="box" style="border-top: 5px solid #2196f3; height: 100%;">
+          <div class="media">
+            <div class="media-left">
+              <span style="font-size: 3em;">⚖️</span>
+            </div>
+            <div class="media-content">
+              <p class="title is-5">Robust Classification</p>
+              <p class="subtitle is-6" style="margin-top: 5px;">
+                Our <strong>Hybrid7Net6</strong> framework successfully handled class imbalance, achieving high accuracy (Mild: 95%, Severe: 94%) using WeightedRandomSampler.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="column is-6">
+        <div class="box" style="border-top: 5px solid #9c27b0; height: 100%;">
+          <div class="media">
+            <div class="media-left">
+              <span style="font-size: 3em;">🧠</span>
+            </div>
+            <div class="media-content">
+              <p class="title is-5">Explainable AI (XAI)</p>
+              <p class="subtitle is-6" style="margin-top: 5px;">
+                Integration of <strong>LIME and Grad-CAM</strong> provided visual validation, confirming that the model focuses on relevant liver regions (e.g., fragmentation) for decision making.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="column is-6">
+        <div class="box" style="border-top: 5px solid #ff9800; height: 100%;">
+          <div class="media">
+            <div class="media-left">
+              <span style="font-size: 3em;">🏥</span>
+            </div>
+            <div class="media-content">
+              <p class="title is-5">Clinical Applicability</p>
+              <p class="subtitle is-6" style="margin-top: 5px;">
+                The end-to-end pipeline demonstrates that automated systems can reliably grade cirrhosis severity from 2D MRI slices without invasive biopsy.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <div style="margin-top: 50px;">
+      <h2 class="title is-3 has-text-centered">Future Directions</h2>
+      <div class="content has-text-centered" style="margin-bottom: 30px;">
+        <p>Prospective avenues to further enhance the system's capability and deployment.</p>
+      </div>
+
+      <div class="box" style="background-color: #f5f5f5; border-left: 5px solid #363636;">
+        <div class="content">
+          <ul style="list-style: none; margin-left: 0;">
+            
+            <li style="margin-bottom: 15px; display: flex; align-items: start;">
+              <span style="color: #3273dc; margin-right: 10px; font-weight: bold;">➤</span>
+              <span>
+                <strong>3D Volume Analysis:</strong> Extending the current 2D slice-based approach to 3D volumetric analysis to capture the complete spatial context of liver fibrosis.
+              </span>
+            </li>
+
+            <li style="margin-bottom: 15px; display: flex; align-items: start;">
+              <span style="color: #3273dc; margin-right: 10px; font-weight: bold;">➤</span>
+              <span>
+                <strong>Multi-Modal Integration:</strong> Incorporating clinical data (blood biomarkers, patient history) alongside MRI images to improve diagnostic precision.
+              </span>
+            </li>
+
+            <li style="margin-bottom: 15px; display: flex; align-items: start;">
+              <span style="color: #3273dc; margin-right: 10px; font-weight: bold;">➤</span>
+              <span>
+                <strong>Federated Learning:</strong> Implementing privacy-preserving federated learning to train models across multiple hospitals without sharing sensitive patient data.
+              </span>
+            </li>
+
+            <li style="display: flex; align-items: start;">
+              <span style="color: #3273dc; margin-right: 10px; font-weight: bold;">➤</span>
+              <span>
+                <strong>Real-Time Deployment:</strong> Developing a lightweight version of the model for mobile applications or real-time clinical support systems.
+              </span>
+            </li>
+
+          </ul>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
   
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
