--- a/index.html
+++ b/index.html
@@ -77,36 +77,47 @@
           <h1 class="title is-1 publication-title">Explainable AI for Segmentation and Classification of Liver Cirrhosis on T2-Weighted MRI</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://keunhong.com">Samrat Kumar Dey</a><sup>1</sup>,</span>
-            <span class="author-block">
-              <a href="https://utkarshsinha.com">Deblina Mazumder Setu</a><sup>2</sup>,</span>
-            <span class="author-block">
-              <a href="https://jonbarron.info">Tania Islam</a><sup>2</sup>,
+           <a href="mailto:dmazumder18.cse@bu.ac.bd">Deblina Mazumder Setu</a><sup>1</sup>,
+          </span>
+          <span class="author-block">
+          <a href="mailto:samrat.sst@bou.ac.bd">Samrat Kumar Dey</a><sup>2</sup>,
+           </span>
+          <span class="author-block">
+           <a href="mailto:taislam@bu.ac.bd">Tania Islam</a><sup>1</sup>,
+           </span>
+          <span class="author-block">
+          <a href="mailto:arpita.cse@pstu.ac.bd">Arpita Howlader</a><sup>3</sup>,
+         </span>
+           <span class="author-block">
+           <a href="mailto:saurov@appscode.com">Saurov Chandra Biswas</a><sup>4</sup>,
+          </span>
+          <span class="author-block">
+          <a href="mailto:rmiit@juniv.edu">Rashed Mazumder</a><sup>5</sup>,
+          </span>
+          <span class="author-block">
+           <a href="mailto:u.raihan.siddiqi@gmail.com">Umme Raihan Siddiqi</a><sup>6</sup>,
+           </span>
+          <span class="author-block">
+           <a href="mailto:mahbub@cse.mist.ac.bd">Md. Mahbubur Rahman</a><sup>7</sup>
             </span>
-            <span class="author-block">
-              <a href="http://sofienbouaziz.com">Sofien Bouaziz</a><sup>2</sup>,
-            </span>
-            <span class="author-block">
-              <a href="https://www.danbgoldman.com">Dan B Goldman</a><sup>2</sup>,
-            </span>
-            <span class="author-block">
-              <a href="https://homes.cs.washington.edu/~seitz/">Steven M. Seitz</a><sup>1,2</sup>,
-            </span>
-            <span class="author-block">
-              <a href="http://www.ricardomartinbrualla.com">Ricardo Martin-Brualla</a><sup>2</sup>
-            </span>
+            
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>Bangladesh Open University,</span>
-            <span class="author-block"><sup>2</sup>University of Barishal</span>
+            <span class="author-block"><sup>1</sup>University of Barishal,</span>
+            <span class="author-block"><sup>2</sup>Bangladesh Open University,</span>
+            <span class="author-block"><sup>3</sup>Patuakhali Science and Technology University,</span>
+            <span class="author-block"><sup>4</sup>AppsCode Inc.,</span>
+            <span class="author-block"><sup>5</sup>Jahangirnagar University,</span>
+            <span class="author-block"><sup>6</sup>Shaheed Suhrawardy Medical College and Hospital,</span>
+            <span class="author-block"><sup>7</sup>Military Institute of Science and Technology</span>
           </div>
 
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/pdf/2011.12948"
+                <a href="#"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -115,7 +126,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://arxiv.org/abs/2011.12948"
+                <a href="#"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -912,11 +923,11 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{park2021nerfies,
-  author    = {Park, Keunhong and Sinha, Utkarsh and Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and Seitz, Steven M. and Martin-Brualla, Ricardo},
+    <pre><code>@article{setu2025explainable,
+  author    = {Setu, Deblina Mazumder and Dey, Samrat Kumar and Islam, Tania and Howlader, Arpita and Biswas, Saurov Chandra and Mazumder, Rashed and Siddiqi, Umme Raihan and Rahman, Md. Mahbubur},
   title     = {Explainable AI for Segmentation and Classification of Liver Cirrhosis on T2-Weighted MRI},
-  journal   = {ICCV},
-  year      = {2021},
+  journal   = {},
+  year      = {},
 }</code></pre>
   </div>
 </section>
