--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       
       <a class="navbar-item" href="#">
         <div style="display: flex; flex-direction: column; align-items: center; line-height: 1.2;">
-          <img src="./static/images/Figure-2-3URNet_final.png" 
+          <img src="./static/images/3UR.drawio.png" 
                alt="3UResNet Logo" 
                style="max-height: 120px; width: auto; margin-bottom: 2px;">
           <span style="font-weight: bold; font-size: 20px; color: #333;">
