--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
   <link rel="stylesheet" href="./static/css/index.css">
-  <link rel="icon" href="./static/images/deep-learning.png">
+  <link rel="icon" href="./static/images/3UR.drawio.png">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script defer src="./static/js/fontawesome.all.min.js"></script>
@@ -58,7 +58,7 @@
         <div style="display: flex; flex-direction: column; align-items: center; line-height: 1.2;">
           <img src="./static/images/3UR.drawio.png" 
                alt="3UResNet Logo" 
-               style="max-height: 90px; width: auto; margin-bottom: 2px;">
+               style="max-height: 60px; width: auto; margin-bottom: 2px;">
           <span style="font-weight: bold; font-size: 20px; color: #333;">
             3UResNet
           </span>
